--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,16 +36,16 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t churn-app .
+        docker build -t elodie_churn .
       
     - name: Run Tests in Docker
       run: |
-        docker run churn-app pytest -v
+        docker run elodie_churn pytest -v
 
     - name: Initialize Elastic Beanstalk Application
       run: |
-        eb init -p docker churn-app --region eu-west-1
+        eb init -p docker elodie_churn --region eu-west-1
 
     - name: Deploy to Elastic Beanstalk
       run: |
-        eb deploy churn-env
+        eb deploy Elodiechurn-env
